--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.110.1"
 uvicorn = {extras = ["all"], version = "^0.29.0"}
 motor = "^3.4.0"
 pytest = "^8.1.1"
+pytest-asyncio = "^0.23.6"
 
 
 [build-system]
